km took second pass on finalReport  before replying to authors

--- a/finalReport.html
+++ b/finalReport.html
@@ -1916,10 +1916,10 @@ reportObject &lt;- reproCheck(reportedValue = '113',
 </div>
 <div id="step-5-conclusion" class="section level1">
 <h1>Step 5: Conclusion</h1>
-<p>We generally reproduced the findings of the paper, despite some major numerical errors in small values. Our suspicion is that these are largely caused by SPSS/R differences; this hypothesis could be tested directly. We did have trouble reproducing the PCA to generate the wise reasoning composite scores from the raw data. We think this due to a missing variable for question 4A from Table 1 and 5 missing values in the raw data file that are not mentioned in the paper.</p>
+<p>We generally reproduced the findings of the paper, despite some major numerical errors in small values. Our suspicion is that these migght be caused by SPSS/R differences; this hypothesis could be tested directly. We initially had trouble reproducing the PCA to generate the wise reasoning composite scores from the raw data due to a missing variable for question 4A from Table 1 and 5 missing values in the raw data file that are not mentioned in the paper. But after author assistance, these insufficient information errors were resolved.</p>
 <pre class="r"><code>Author_Assistance = TRUE # was author assistance provided? (if so, enter TRUE)
 
-Insufficient_Information_Errors &lt;- 2 # how many discrete insufficient information issues did you encounter?
+Insufficient_Information_Errors &lt;- 0 # how many discrete insufficient information issues did you encounter?
 
 # Assess the causal locus (discrete reproducibility issues) of any reproducibility errors. Note that there doesn't necessarily have to be a one-to-one correspondance between discrete reproducibility issues and reproducibility errors. For example, it could be that the original article neglects to mention that a Greenhouse-Geisser correct was applied to ANOVA outcomes. This might result in multiple reproducibility errors, but there is a single causal locus (discrete reproducibility issue).
 
@@ -1973,8 +1973,8 @@ if(reportType == &quot;final&quot;){
 ##  ui       X11                         
 ##  language (EN)                        
 ##  collate  en_US.UTF-8                 
-##  tz       America/Los_Angeles         
-##  date     2018-06-25                  
+##  tz       America/New_York            
+##  date     2018-06-29                  
 ## 
 ##  package      * version date      
 ##  abind          1.4-5   2016-07-21
